--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -2,14 +2,12 @@
   "version": 2,
   "builds": [
     {
-      "src": "index.js",
+      "src": "backend/index.js",
       "use": "@vercel/node"
-    }
-  ],
-  "routes": [
+    },
     {
-      "src": "/(.*)",
-      "destination": "index.js"
+      "src": "frontend/package.json",
+      "use": "@vercel/static-build"
     }
   ]
 }
