--- a/vercel.json
+++ b/vercel.json
@@ -9,5 +9,15 @@
       "src": "frontend/package.json",
       "use": "@vercel/static-build"
     }
+  ],
+  "rewrites": [
+    {
+      "source": "/api/(.*)",
+      "destination": "backend/index.js"
+    },
+    {
+      "source": "/(.*)",
+      "destination": "frontend/$1"
+    }
   ]
 }
