--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,31 @@
 {
   "version": 2,
+
+  "builds": [
+    {
+      "src": "backend/index.js",
+
+      "use": "@vercel/node"
+    },
+
+    {
+      "src": "frontend/package.json",
+
+      "use": "@vercel/static-build"
+    }
+  ],
+
   "rewrites": [
     {
       "source": "/api/(.*)",
+
       "destination": "backend/index.js"
     },
+
     {
       "source": "/(.*)",
-      "destination": "/"
+
+      "destination": "frontend/$1"
     }
   ]
 }
